[package]
name = "hash_mapper"
version = "0.1.0"
edition = "2024"

[features]
tokio = ["dep:tokio", "redis/tokio-comp"]

[dependencies]
anyhow = "1.0.102"
tokio = { version = "1", optional = true, features = ["rt", "macros", "sync"] }
# pulls in the proc-macro crate privately
hash_mapper_derive = { path = "./hash_mapper_derive" }
redis = { version = "1", features = ["streams"] }
